
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;


 int* cve_2012_YYYY ;
 int exit (int) ;
 int poke_byte (int*,int,int) ;
 int printf (char*) ;

__attribute__((used)) static void physwrite16(volatile uint32_t *m, uint32_t target, uint32_t *buffer)
{
  if (1) {
    uint32_t i, ofs = (target & 0x3ffff)/4;
    if (target & 0xf) {
      printf("[ ] Function requires 16-byte alignment for output!\n");
      exit(-1);
    }

    cve_2012_YYYY[0xf00/4] = 0xb | ((target >> 18) << 10);

    for (i = 0; i < 4; ++i) {
      int shift = 8 * i;
      uint32_t val;
      poke_byte(cve_2012_YYYY, 0x102, 1<<i);
      val = (buffer[0] >> shift) & 0xff;
      val |= ((buffer[1] >> shift) & 0xff) << 8;
      val |= ((buffer[2] >> shift) & 0xff) << 16;
      val |= ((buffer[3] >> shift) & 0xff) << 24;
      m[ofs/4] = val;
    }
  }
}
